<resources>
    <string name="login_title">Login</string>
    <string name="main_title">Wulkanowy</string>
    <string name="grade_title">Grades</string>
    <string name="attendance_title">Attendance</string>
    <string name="exam_title">Exams</string>
    <string name="timetable_title">Timetable</string>
    <string name="settings_title">Settings</string>
    <string name="more_title">More</string>
    <string name="about_title">About</string>
    <string name="logviewer_title">Log viewer</string>
    <string name="debug_title">Debug</string>
    <string name="notification_debug_title">Notification debug</string>
    <string name="contributors_title">Contributors</string>
    <string name="license_title">Licenses</string>
    <string name="message_title">Messages</string>
    <string name="send_message_title">New message</string>
    <string name="add_homework_title">New homework</string>
    <string name="note_title">Notes and achievements</string>
    <string name="homework_title">Homework</string>
    <string name="account_title">Accounts manager</string>
    <string name="account_quick_title">Select account</string>
    <string name="account_details_title">Account details</string>
    <string name="student_info_title">Student info</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="notifications_center_title">Notifications center</string>
    <string name="grade_subtitle">Semester %1$d, %2$d/%3$d</string>
    <string name="login_header_default">Sign in with the student or parent account</string>
    <string name="login_header_symbol">Enter the symbol from the register page for account: &lt;b>%1$s&lt;/b></string>
    <string name="login_nickname_hint">Username</string>
    <string name="login_email_hint">Email</string>
    <string name="login_login_pesel_email_hint">Login, PESEL or e-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_host_hint">UONET+ register variant</string>
    <string name="login_type_api">Mobile API</string>
    <string name="login_type_scrapper">Scraper</string>
    <string name="login_type_hybrid">Hybrid</string>
    <string name="login_token_hint">Token</string>
    <string name="login_pin_hint">PIN</string>
    <string name="login_symbol_hint">Symbol</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_invalid_password">Password too short</string>
    <string name="login_incorrect_password_default">Login details are incorrect</string>
    <string name="login_incorrect_password">%1$s. Make sure the correct UONET+ register variation is selected below</string>
    <string name="login_invalid_pin">Invalid PIN</string>
    <string name="login_invalid_token">Invalid token</string>
    <string name="login_expired_token">Token expired</string>
    <string name="login_invalid_email">Invalid email</string>
    <string name="login_invalid_login">Use the assigned login instead of email</string>
    <string name="login_invalid_custom_email">Use the assigned login or email in @%1$s</string>
    <string name="login_invalid_symbol">Invalid symbol</string>
    <string name="login_incorrect_symbol">Student not found. Validate the symbol and the chosen variation of the UONET+ register</string>
    <string name="login_duplicate_student">Selected student is already logged in</string>
    <string name="login_symbol_helper">The symbol can be found on the register page in&#160;<b>Uczeń</b> →&#160;<b>Dostęp Mobilny</b> →&#160;<b>Zarejestruj urządzenie mobilne</b>.\n\nMake sure that you have set the appropriate register variant in the <b>UONET+ register variant</b> field on the previous screen. Wulkanowy does not detect pre-school students at the moment</string>
    <string name="login_select_student">Select students to log in to the application</string>
    <string name="login_advanced">Other options</string>
    <string name="login_advanced_warning_mobile_api">In this mode, a lucky number does not work, a class grade stats, summary of attendance, excuse for absence, completed lessons, school information and preview of the list of registered devices</string>
    <string name="login_advanced_warning_scraper">This mode displays the same data as it appears on the register website</string>
    <string name="login_advanced_warning_hybrid">The combination of the best features of the other two modes. It works faster than scraper and provides features not available in the Mobile API mode. It is in the experimental phase</string>
    <string name="login_privacy_policy">Privacy policy</string>
    <string name="login_contact_header">Trouble signing in? Contact us!</string>
    <string name="login_contact_email">Email</string>
    <string name="login_contact_discord">Discord</string>
    <string name="login_email_intent_title">Send email</string>
    <string name="login_email_subject" translatable="false">Zgłoszenie: Problemy z logowaniem</string>
    <string name="login_email_text" translatable="false">Informacje o aplikacji:\n\nUrządzenie: %1$s\nWersja SDK: %2$s\nWersja aplikacji: %3$s\nDodatkowe informacje: %4$s\nOstatni błąd: %5$s\n\nNazwa szkoły wraz z miejscowością i numer klasy: </string>
    <string name="login_recover_warning">Make sure you select the correct UONET+ register variation!</string>
    <string name="login_recover_button">I forgot my password</string>
    <string name="login_recover_title">Recover your account</string>
    <string name="login_recover">Recover</string>
    <string name="login_signed_in">Student is already signed in</string>
    <string name="main_account_picker">Account manager</string>
    <string name="main_log_in">Log in</string>
    <string name="main_session_expired">Session expired</string>
    <string name="main_session_relogin">Session expired, log in again</string>
    <string name="grade_header">Grade</string>
    <string name="grade_semester">Semester %d</string>
    <string name="grade_switch_semester">Change semester</string>
    <string name="grade_no_items">No grades</string>
    <string name="grade_weight">Weight</string>
    <string name="grade_weight_value">Weight: %s</string>
    <string name="grade_comment">Comment</string>
    <string name="grade_number_new_items">Number of new ratings: %1$d</string>
    <string name="grade_average">Average: %1$.2f</string>
    <string name="grade_points_sum">Points: %s</string>
    <string name="grade_no_average">No average</string>
    <string name="grade_summary_points">Total points</string>
    <string name="grade_summary_final_grade">Final grade</string>
    <string name="grade_summary_predicted_grade">Predicted grade</string>
    <string name="grade_summary_calculated_average">Calculated average</string>
    <string name="grade_summary_calculated_average_help_dialog_title">How does Calculated Average work?</string>
    <string name="grade_summary_calculated_average_help_dialog_message">The Calculated Average is the arithmetic average calculated from the subjects averages. It allows you to know the approximate final average. It is calculated in a way selected by the user in the application settings. It is recommended that you choose the appropriate option. This is because the calculation of school averages differs. Additionally, if your school reports the average of the subjects on the Vulcan page, the application downloads them and does not calculate these averages. This can be changed by forcing the calculation of the average in the application settings.\n\n<b>Average of grades only from selected semester</b>:\n1. Calculating the weighted average for each subject in a given semester\n2.Adding calculated averages\n3. Calculation of the arithmetic average of the summed averages\n\n<b>Average of averages from both semesters</b>:\n1.Calculating the weighted average for each subject in semester 1 and 2\n2. Calculating the arithmetic average of the calculated averages for semesters 1 and 2 for each subject.\n3. Adding calculated averages\n4. Calculation of the arithmetic average of the summed averages\n\n<b>Average of grades from the whole year:</b>\n1. Calculating weighted average over the year for each subject. The final average in the 1st semester is irrelevant.\n3. Adding calculated averages\n4. Calculating the arithmetic average of summed averages</string>
    <string name="grade_summary_final_average_help_dialog_title">How does the Final Average work?</string>
    <string name="grade_summary_final_average_help_dialog_message">The Final Average is the arithmetic average calculated from all currently available final grades in the given semester.\n\nThe calculation scheme consists of the following steps:\n1. Summing up the final grades given by teachers\n2. Divide by the number of subjects that have already been graded</string>
    <string name="grade_summary_final_average">Final average</string>
    <string name="grade_summary_from_subjects">from %1$d of %2$d subjects</string>
    <string name="grade_menu_summary">Summary</string>
    <string name="grade_menu_statistics">Class</string>
    <string name="grade_menu_read">Mark as read</string>
    <string name="grade_statistics_partial">Partial</string>
    <string name="grade_statistics_semester">Semester</string>
    <string name="grade_statistics_points">Points</string>
    <string name="grade_statistics_legend">Legend</string>
    <string name="grade_statistics_average">Average: %1$s</string>
    <string name="grade_statistics_average_class">Class</string>
    <string name="grade_statistics_average_student">Student</string>
    <plurals name="grade_number_item">
        <item quantity="one">%d grade</item>
        <item quantity="other">%d grades</item>
    </plurals>
    <plurals name="grade_new_items">
        <item quantity="one">New grade</item>
        <item quantity="other">New grades</item>
    </plurals>
    <plurals name="grade_new_items_predicted">
        <item quantity="one">New predicted grade</item>
        <item quantity="other">New predicted grades</item>
    </plurals>
    <plurals name="grade_new_items_final">
        <item quantity="one">New final grade</item>
        <item quantity="other">New final grades</item>
    </plurals>
    <plurals name="grade_notify_new_items">
        <item quantity="one">You received %1$d grade</item>
        <item quantity="other">You received %1$d grades</item>
    </plurals>
    <plurals name="grade_notify_new_items_predicted">
        <item quantity="one">You received %1$d predicted grade</item>
        <item quantity="other">You received %1$d predicted grades</item>
    </plurals>
    <plurals name="grade_notify_new_items_final">
        <item quantity="one">You received %1$d final grade</item>
        <item quantity="other">You received %1$d final grades</item>
    </plurals>
    <string name="timetable_lesson">Lesson</string>
    <string name="timetable_room">Room</string>
    <string name="timetable_group">Group</string>
    <string name="timetable_time">Hours</string>
    <string name="timetable_changes">Changes</string>
    <string name="timetable_no_items">No lessons this day</string>
    <string name="timetable_minutes">%s min</string>
    <string name="timetable_seconds">%s sec</string>
    <string name="lucky_number_title">Lucky number</string>
    <string name="mobile_devices_title">Mobile devices</string>
    <string name="schoolandteachers_title">School and teachers</string>
    <string name="conferences_title">Conferences</string>
    <string name="conferences_present">Present at conference</string>
    <string name="conference_agenda">Agenda</string>
    <string name="school_announcement_title">School announcements</string>
    <string name="all_date">Date</string>
    <string name="all_details">Details</string>
    <string name="all_close">Close</string>
    <string name="all_no_data">No data</string>
    <string name="all_subject">Subject</string>
    <string name="all_title">Title</string>
</resources>