<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/Wulkanowy.Dialog">

    <androidx.core.widget.NestedScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="8dp">

            <View
                android:layout_width="280dp"
                android:layout_height="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/allDetailsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/all_details"
                android:textColor="?attr/colorOnSurface"
                android:textAppearance="?attr/textAppearanceHeadlineSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/conferenceDialogHeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="24dp"
                android:text="@string/all_title"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textAppearance="?attr/textAppearanceBodySmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/allDetailsHeader" />

            <TextView
                android:id="@+id/conferenceDialogHeaderValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="24dp"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="@string/all_no_data"
                android:textIsSelectable="true"
                android:textColor="?attr/colorOnSurface"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conferenceDialogHeaderTitle" />

            <TextView
                android:id="@+id/conferenceDialogSubjectTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/all_subject"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textAppearance="?attr/textAppearanceBodySmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conferenceDialogHeaderValue" />

            <TextView
                android:id="@+id/conferenceDialogSubjectValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="24dp"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="@string/all_no_data"
                android:textIsSelectable="true"
                android:textColor="?attr/colorOnSurface"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conferenceDialogSubjectTitle" />

            <TextView
                android:id="@+id/conferenceDialogDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/all_date"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textAppearance="?attr/textAppearanceBodySmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conferenceDialogSubjectValue" />

            <TextView
                android:id="@+id/conferenceDialogDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="24dp"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="@string/all_no_data"
                android:textIsSelectable="true"
                android:textColor="?attr/colorOnSurface"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conferenceDialogDateTitle" />

            <TextView
                android:id="@+id/conferenceDialogPresentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/conferences_present"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textAppearance="?attr/textAppearanceBodySmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conferenceDialogDateValue" />

            <TextView
                android:id="@+id/conferenceDialogPresentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="24dp"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="@string/all_no_data"
                android:textIsSelectable="true"
                android:textColor="?attr/colorOnSurface"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conferenceDialogPresentTitle" />

            <TextView
                android:id="@+id/conferenceDialogAgendaTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/conference_agenda"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textAppearance="?attr/textAppearanceBodySmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conferenceDialogPresentValue" />

            <TextView
                android:id="@+id/conferenceDialogAgendaValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="24dp"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="@string/all_no_data"
                android:textIsSelectable="true"
                android:textColor="?attr/colorOnSurface"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conferenceDialogAgendaTitle"
                tools:maxLines="5"
                tools:text="@tools:sample/lorem/random" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/conferenceDialogClose"
                style="@style/Widget.Material3.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="24dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:minWidth="88dp"
                android:text="@string/all_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conferenceDialogAgendaValue" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</com.google.android.material.card.MaterialCardView>
